Lesson6/examples/pod-no-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-label
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        runAsNonRoot: true
