Lesson6/examples/pod-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: root-pod
spec:
  containers:
    - name: nginx
      image: nginx
      # No securityContext, so will run as root by default
