Lesson6/examples/validate-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-run-as-non-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: block-root-containers
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Running as root is not allowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
